[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-pvp-arena"
version = "0.1.0"
description = "Simple PvP duel arena plugin example"

[project.entry-points."endstone"]
pvp_arena = "endstone_pvp_arena:PvPArena"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_pvp_arena"]
